Add flies via upload

--- a/pickup3.html
+++ b/pickup3.html
@@ -70,46 +70,46 @@
             </div>
     
             <div class="form-group container-fluid padding">
-                <label for="pizzatoppings" class="display-5">Sides</label>
-                <select class="form-control" id="pizzasides">
-                    <option value="1">None</option>
-                    <option value="2">BBQ Wings</option>
-                    <option value="3">Cheesy Bread</option>
-                    <option value="4">Large</option>
+                <label for="pizzasides" id="pizzasides" class="display-5">Sides</label>
+                <select class="form-control">
+                    <option value="0">None</option>
+                    <option value="20.00">BBQ Wings</option>
+                    <option value="15.00">Cheesy Bread</option>
+                    <option value="16.00">Cinnamon Sticks</option>
                 </select>
               </div>
     
             <div class="form-group container-fluid">
-                <label for="pizzatoppings">Drinks</label>
-                <select class="form-control" id="pizzadrinks">
-                    <option value="null'">None</option>
-                    <option value="Sprite">Sprite</option>
-                    <option value="Coke">Coke</option>
-                    <option value="Kola Champagne" >Kola Champagne</option>
+                <label for="pizzasides" id="pizzasides">Drinks</label>
+                <select class="form-control" >
+                    <option value="0">None</option>
+                    <option value=".5">Sprite</option>
+                    <option value="1">Coke</option>
+                    <option value="1" >Kola Champagne</option>
                 </select>
               </div>
 
               <div class="custom-control custom-radio custom-control-inline">
-                <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
-                <label class="custom-control-label" for="customRadioInline1">500ml</label>
+                <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input" value="2">
+                <label class="custom-control-label" id="pizzasides" for="customRadioInline1">500ml</label>
               </div>
               <div class="custom-control custom-radio custom-control-inline">
-                <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
-                <label class="custom-control-label" for="customRadioInline2">1.5L</label>
+                <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input" value="6.50">
+                <label class="custom-control-label" id="pizzasides" for="customRadioInline2">1.5L</label>
               </div>
 
               <div class="form-group container-fluid dips">
-                <label for="pizzatoppings">Dips</label>
-                <select class="form-control" id="pizzadips">
-                    <option value="null">None</option>
-                    <option value="Marinara">Marinara</option>
-                    <option value="Ranch">Ranch</option>
+                <label for="pizzasides" id="pizzasides">Dips</label>
+                <select class="form-control">
+                    <option value="0">None</option>
+                    <option value="2">Marinara</option>
+                    <option value="2">Ranch</option>
                 </select>
               </div>
 
         <div class="btn-group container-fluid next-prev" role="group" aria-level="navigation buttons">
-            <a href="C:\Users\leand\Desktop\Web design\Assignment 3 - pizza delviery\pickup2.html" class="btn btn-primary btn-sm active" role="button" aria-pressed="true" autocomplete="off">Previous</a>
-            <a href="C:\Users\leand\Desktop\Web design\Assignment 3 - pizza delviery\checkout.html" class="btn btn-primary btn-sm active" role="button" aria-pressed="true" autocomplete="off">Next</a>
+            <a href="C:\Users\leand\Desktop\Web design\Assignment 3 - pizza delviery\pickup2.html" class="btn btn-primary active" role="button" aria-pressed="true" autocomplete="off">Previous</a>
+            <a href="C:\Users\leand\Desktop\Web design\Assignment 3 - pizza delviery\checkout.html" class="btn btn-primary active" role="button" aria-pressed="true" autocomplete="off">Next</a>
         </div>
     </body>
 </html>
