--- a/Index.html
+++ b/Index.html
@@ -12,9 +12,10 @@
         <!--Bootstrap CSS-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <!--Fonts-->
-        <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
         <!--Js-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -65,16 +66,15 @@
         </nav>
 
         <!--Navbar 2-->
-        <nav class="nav2 navbar navbar-expand-lg bg-dark navbar-dark text-center sticky-top">
-            <div class="padding">
+        <nav class="nav2 navbar navbar-expand-lg bg-dark navbar-dark sticky-top">
+            <div>
               <!-- Navbar 2 links -->
-                    <a class="navbar-brand" href="#">
-                        <div class="btn-group btn-group-lg btn-group-justified " data-toggle="buttons">
+                    <a class="navbar-brand" href="#"></a>
+                    </div>
+                        <li class="btn-group btn-group-lg btn-group-justified" data-toggle="buttons">
                             <a href="C:\Users\leand\Desktop\Web design\Assignment 3 - pizza delviery\pickup.html" class="btn btn-primary">pick up</a>
                             <a href="#" class="btn btn-danger">delviery</a>
-                        </div>
-                    </a>
-            </div>
+                        </li>
         </nav>
                     <!--Carousel-->
         <div id="slides" class="carousel slide" data-ride="carousel">
@@ -110,7 +110,7 @@
             </div>
 
             <!--deals-->
-        <div class="container-fluid padding">
+        <div class="container-fluid">
             <div class="row deals text-center padding">
                 <div class="col-12"></div>
                     <h1 class="display-3">TODAY'S DEALS</h1>
@@ -119,7 +119,7 @@
         </div>
 
         <!--deal pictures-->
-        <div class="container-fluid padding">
+        <div class="container-fluid">
             <div class="row deals text-center">
                 <div class="col-md-12 col-lg-6">
                     <img id="grid-icon" src="images/5 menu.jpg">
@@ -134,15 +134,22 @@
         <div class="container-fluid padding bottom">
             <div class="row bottom text-center">
                 <div class="pizza-info col-xs-12 col-sm-6 col-md-4">
-                    <p>Dos Bal Pizza
-                        <p><a href="#"> Our Menu </a></p>
+                    <p id="bottomdosbal">Dos Bal Pizza
+                        <p><a class="bottom" href="#"> Our Menu </a></p>
                     </p>
                 </div>
-                <div class="contact-info col-xs-12 col-sm-6 col-md-4 padding">
-                    <p>Contact Us
-                <p>Call xxx-xxxx</p>
-                <a href="#">Contact Details</a>
-                <a href="#">Feedback</a>
+
+                <div class="contact-info col-xs-12 col-sm-6 col-md-4">
+                    <p id="bottomcontact">Contact Us
+                <p><a class="bottom" href="#">Contact Details</a></p>
+                <p><a class="bottom" href="#">Feedback</a></p>
+                </p>
+                </div>
+
+                <div class="contact-info col-xs-12 col-sm-6 col-md-4">
+                    <p id="bottomcontact">About Pizza
+                <p><a class="bottom" href="#">Terms & conditions</a></p>
+                <p><a class="bottom" href="#">Policy</a></p>
                 </p>
                 </div>
             </div>
