--- a/pickup.html
+++ b/pickup.html
@@ -70,23 +70,25 @@
         </div>
 
         <div class="form-group container-fluid padding">
-            <label for="pizzatoppings" class="display-5">Pick Your Size And Crust</label>
-            <select class="form-control" id="pizzasize">
-                <option value="small">Small</option>
-                <option value="medium">Medium</option>
-                <option value="large">Large</option>
+            <label for="pizzatype" class="display-5 sizeand" id="sizeprice">Pick Your Size And Crust</label>
+            <select class="form-control" id="pizzatype" onchange="getSelectedValue()">
+                <option value="12">Small</option>
+                <option value="28.50">Medium</option>
+                <option value="32">Large</option>
             </select>
           </div>
 
         <div class="form-group container-fluid">
-            <label for="pizzatoppings"></label>
-            <select class="form-control" id="pizzatype">
-                <option value="handtossed">Hand Tossed</option>
-                <option value="thin">Thin Crust</option>
-                <option value="pan">Pan</option>
+            <label for="pizzatype" id="crustprice"></label>
+            <select class="form-control" id="pizzatype" onchange="getSelectedValue()">
+                <option value="2">Hand Tossed</option>
+                <option value="5">Thin Crust</option>
+                <option value="15">Pan</option>
             </select>
           </div>
 
-          <a href="C:\Users\leand\Desktop\Web design\Assignment 3 - pizza delviery\pickup2.html" class="btn btn-primary btn-sm active next" role="button" aria-pressed="true">Next</a>
+          <a href="C:\Users\leand\Desktop\Web design\Assignment 3 - pizza delviery\pickup2.html" class="btn btn-primary active next" id="button1" role="button" aria-pressed="true">Next</a>
+
+
     </body>
 </html>
